--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* BODY */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,7 +8,12 @@
 
 body {
     background-color: #d9dcd6;
+    font-size: 16px;
 }
+
+/* BODY ENDS */
+
+/* HEADER */ 
 
 .header {
     padding: 20px;
@@ -24,7 +31,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +39,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -46,9 +53,9 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
+/* HEADER ENDS*/
+
+/* HERO */
 
 .hero {
     height: 800px;
@@ -59,16 +66,47 @@ p {
     background-position: center;
 }
 
-.float-left, .float-right  {
+.float-left {
     float: left;
     margin-right: 25px;
 }
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+/* HERO ENDS */
+
+/* CONTENT SECTION */
 
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+.content img {
+    max-height: 200px;
+}
+
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.content div {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* CONTENT SECTION ENDS */
+
+/* BENEFITS SECTION */
 
 .benefits {
     margin-right: 20px;
@@ -81,39 +119,26 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost  {
+.benefits p {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3, .benefit-brand h3, .social-media-marketing h2 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
+    color: #ffffff;
 }
 
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+/* BENEFITS SECTION ENDS */
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2  {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/* FOOTER */
 
 .footer {
     padding: 30px;
@@ -125,3 +150,5 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
+/* FOOTER ENDS */ 
